--- a/BlogposterCMS/public/assets/scss/components/_content-area.scss
+++ b/BlogposterCMS/public/assets/scss/components/_content-area.scss
@@ -1,9 +1,13 @@
 #content {
+  overflow: hidden;
   flex: 1 1 0;
   min-width: 0;     
   width: 100%; 
   display: flex;
   flex-direction: column;
+  margin-top: 5px;
+  box-shadow: 0 2px 9px rgba(0, 0, 0, 0.05);
+  border-radius: 9px;
 }
 
   .canvas-grid,
